--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@ py-src/__pycache__
 py-src/board.pyc
 training/test.py
 
+py-src/play/__pycache__
+
 # data
-training/lichess_db_standard_rated_2020-03.pgn
-training/positions.txt
+training/raw-data
+training/training-data
 training/__pycache__
 /Reference
 
